cmake_minimum_required(VERSION 3.13)
project(ProjectEuler)

set(CMAKE_CXX_STANDARD 14)

add_executable(ProjectEuler src/Problem1/Problem1.cpp src/Problem2/Problem2.cpp src/main.cpp src/Util/Util.cpp src/Problem3/Problem3.cpp src/Problem3/Problem3.h src/Util/Util.h src/Problem2/Problem2.h src/Problem4/Problem4.cpp src/Problem4/Problem4.h src/Problem5/Problem5.cpp src/Problem5/Problem5.h src/Problem6/Problem6.cpp src/Problem6/Problem6.h src/Problem7/Problem7.cpp src/Problem7/Problem7.h src/Problem1/Problem1.h src/Problem8/Problem8.cpp src/Problem8/Problem8.h src/Problem9/Problem9.cpp src/Problem9/Problem9.h src/Problem10/Problem10.cpp src/Problem10/Problem10.h src/Problem11/Problem11.cpp src/Problem11/Problem11.h)